# BMO-Project

./: README.md  Test3.py  raylibTest.py  raylibTest2.py  test.py
BMO Face Engine/: CMakeLists.txt  TrainBrain.py  VisemeExtractor.py  bmo-project.geany  bmoEpisodes.vb  bmo_brain.pkl  bmo_episodes.py  eyes_es.fs  faceVisualizer.py  face_database.txt  face_tags.csv  fixDataset.py  fix_JSON.py  fix_split_offsets.py  gamepad_fix.js  mouth_es.fs  shell.html  shell_permanent.html  slice_bmo.py  viseme_debug_log.txt  visemes_database.txt
BMO Face Engine/assets/: BMO_Animation_Lipsync.json
BMO Face Engine/backupbuild/build-mingw/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  blob_log.csv  compile_commands.json  eyes_es.fs  face_database.txt  sdf_es.fs  visemes_database.txt
BMO Face Engine/backupbuild/build-mingw/.cmake/api/v1/reply/: cmakeFiles-v1-292509c2d138ec3a3070.json  codemodel-v2-20f8e45215264b8d7ce7.json  directory-_deps.raylib-build.raylib-Debug-afe58da92c9b32aaaf24.json  index-2026-02-10T20-43-02-0337.json  target-BMO_Engine-Debug-b4f96645d9c692a113b4.json  target-OpenGL__GLU-Debug-2b57682b8e8e64c2152b.json  target-Threads__Threads-Debug-b8d812525ab99a272d0f.json  target-glfw-Debug-5c38bf628b722e931601.json  target-uninstall-Debug-64c516d27d7f0d4836ff.json  target-update_mappings-Debug-3a4af99f8ec9b07e5cf9.json
BMO Face Engine/backupbuild/build-mingw/assets/: lipsync_output.txt
BMO Face Engine/build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  eyes_es.fs  mouth_author_log.csv  procedural_mouth_log.csv  tears_es.fs
BMO Face Engine/build-mingw/.cmake/api/v1/reply/: cache-v2-aabee3f92d1d331dc9aa.json  cache-v2-b3e9ebf19c970bb97844.json  cmakeFiles-v1-5a3aca44d54cc19fb304.json  codemodel-v2-2de4088ee4c3d4ad5e07.json  codemodel-v2-36a5147365f08c222bf7.json  codemodel-v2-3a62c1c3aa73ee7004b1.json  codemodel-v2-85570f430dfde9fc8b5d.json  codemodel-v2-86c058366f60cc3ec0ea.json  codemodel-v2-aaabd1afc1eeb5478fdc.json  codemodel-v2-cae186e23825bfa52f7b.json  codemodel-v2-febe0b995c13eaa9c849.json  directory-_deps.raylib-build-Debug-73e7f3cd83e8099c829a.json  directory-_deps.raylib-build.raylib.external.glfw-Debug-1d9870aa06c97241d6ba.json  directory-_deps.raylib-build.raylib.external.glfw.src-Debug-130d2de604134f87468d.json  index-2026-01-09T22-02-09-0310.json  index-2026-01-10T00-15-13-0961.json  index-2026-01-10T15-47-49-0473.json  index-2026-01-12T15-30-25-0796.json  index-2026-01-14T17-08-43-0769.json  index-2026-01-17T17-20-38-0801.json  index-2026-01-26T16-45-29-0503.json  index-2026-02-16T11-43-15-0459.json  target-BMO_Engine-Debug-221ca98015399acf3e72.json  target-BMO_Engine-Debug-5c050ce7b08bb8d1451f.json  target-BMO_Engine-Debug-6999da7bf13ae93e1970.json  target-BMO_Engine-Debug-74f03aebd501a8581bbf.json  target-BMO_Engine-Debug-754eb03a376c6c6fea8f.json  target-BMO_Engine-Debug-d84c316b4a6bb9f11fac.json  target-BMO_Engine-Debug-e66482389e846d065d82.json  target-BMO_Engine-Debug-f9f0fa7746a144f16ef5.json  target-OpenGL__GL-Debug-4d0fece797758c5f282d.json  target-cppzmq-Debug-3f84308468ffefcac90c.json  target-cppzmq-static-Debug-424f656a93f17310fc80.json  target-libzmq-Debug-4aad05879e023fcc37e9.json  target-libzmq-static-Debug-861e99c0c2f2438467dd.json  target-raylib-Debug-fc17b61d5222a0054493.json
BMO Face Engine/build-mingw/assets/: BMO_Split_Data.json.fixed.json  BMO_SpriteSheetData_SeperateMouthandEyes.json
BMO Face Engine/build-msvc/: mouth_es.fs
BMO Face Engine/build-msvc/Debug/: eyes_es.fs  mouth_es.fs
BMO Face Engine/build_web/: BMO_Engine.wasm  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  server.py
BMO Face Engine/build_web/face-engine/: BMO_Engine.js  index.html
BMO Face Engine/calibration_audio/BackupAudio/: A.m4a  B.m4a  E.m4a  F.m4a  O.m4a  silence.m4a
BMO Face Engine/src/: AffectiveEngine.h  FaceData.h  FaceEngineV2.cpp  FacePoser.cpp  NewFaceEngine.cpp  ParametricMouth.cpp  QATesting.cpp  SEyePoser.cpp  SFacePoser.cpp  SFacePoserFinal.cpp  ShaderParametricEyes.cpp  ShaderParametricFace.cpp  ShaderParametricMouth.cpp  SoftBodyMouth.cpp  brow_es.fs  eyes_es.fs  main.cpp  mouth_es.fs  tears_es.fs  utility.h
BMO Speech Engine/: CMakeLists.txt
BMO Speech Engine/build_web/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  server.py
BMO Speech Engine/build_web/speech-engine/: BMO_Speech.js  BMO_Speech.wasm  index.html
BMO Voice Engine/: bmoNonVerbalRefiner.py  bmo_episodes.py  bmo_metadata.csv  bmo_nonverbal_refiner_pass2.py  ccNonVerbal.py  csvChecker.py  extract_bmo_vocals.py  findBMOCSV.py  find_bmo.py  find_bmo_passtwo.py  label_bmo.py  label_bmo_emote.py  metadata.csv  nonverbal.py  planb_processed.txt  process_bmo_audio.py  process_bmo_audiotest.py  process_nv_bmo.py  slice_bmo.py  srt_crosscheck.py  test_mdx_separation.py  transcribe_bmo.py  transcribe_episodes.py
BMO Voice Engine/srtfiles/: S01E08_BMO.srt  S01E09_BMO.srt  S01E12_BMO.srt  S01E15_BMO.srt  S01E21_BMO.srt  S01E23_BMO.srt  S02E06_BMO.srt  S02E07_BMO.srt  S02E12_BMO.srt  S02E16_BMO.srt  S02E23_BMO.srt  S03E01_BMO.srt  S03E05_BMO.srt  S03E06_BMO.srt  S03E09_BMO.srt  S03E10_BMO.srt  S03E12_BMO.srt  S03E18_BMO.srt  S03E19_BMO.srt  S03E20_BMO.srt  S03E25_BMO.srt  S03E26_BMO.srt  S04E02_BMO.srt  S04E04_BMO.srt  S04E06_BMO.srt  S04E07_BMO.srt  S04E08_BMO.srt  S04E11_BMO.srt  S04E12_BMO.srt  S04E14_BMO.srt  S04E16_BMO.srt  S04E17_BMO.srt  S04E18_BMO.srt  S05E03_BMO.srt  S05E05_BMO.srt  S05E06_BMO.srt  S05E07_BMO.srt  S05E10_BMO.srt  S05E11_BMO.srt  S05E15_BMO.srt  (+77 more)
BMO Voice Engine/supfiles/: S02E06_BMO.sup  S02E07_BMO.sup  S03E01_BMO.sup  S03E05_BMO.sup  S03E06_BMO.sup  S03E09_BMO.sup  S03E18_BMO.sup  S03E26_BMO.sup  S04E02_BMO.sup  S04E04_BMO.sup  S04E07_BMO.sup  S04E08_BMO.sup  S04E12_BMO.sup  S04E18_BMO.sup  S05E03_BMO.sup  S05E15_BMO.sup  S05E17_BMO.sup  S05E19_BMO.sup  S05E20_BMO.sup  S05E28_BMO.sup  S05E33_BMO.sup  S05E34_BMO.sup  S05E37_BMO.sup  S05E40_BMO.sup  S06E04_BMO.sup  S06E05_BMO.sup  (+16 more)
assests/: BMO_SpriteSheet_Data.json
